# ci-agent

./: .gitignore  README.md  TRAE_ANALYSIS_PROFILE_HANDOFF.md  TRAE_MASTER_PLAN.md
backend/: .dockerignore  .env.example  Dockerfile  api_debug.json  api_debug.txt  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_baseline.py  002_add_auth_badcase.py
backend/app/: main.py  run_backend.py
backend/app/api/: agent_routes.py  auth_routes.py  bad_case_routes.py  routes.py  test_routes.py
backend/app/core/: auth.py  config.py  limiter.py  security.py
backend/app/db/: models.py  session.py
backend/app/models/: schemas.py
backend/app/services/: bad_case.py  checkpointer.py  comment_adapter.py  context_compressor.py  decision_memory.py  embedding.py  hitl.py  json_stable.py  llm.py  llm_utils.py  loop_guard.py  memory_store.py  query_rewriter.py  ragas_evaluator.py  recall_metrics.py  recall_tester.py  reranker.py  research_executor.py  retry_policy.py  search_adapter.py  store.py  streaming.py  url_adapter.py  workflow_observability.py
backend/app/worker/: workflow.py
backend/ci_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: run_recall_test.py  run_threshold_comparison.py
backend/tests/: conftest.py  test_agent_enhancements.py  test_analysis_profile.py  test_api.py  test_auth.py  test_bad_case_persistence.py  test_decision_memory.py  test_embedding.py  test_llm.py  test_rag_enhancements.py  test_rate_limit.py  test_recall_api.py  test_search_adapter.py  test_security.py  test_url_adapter.py  test_workflow.py  test_writer_validation.py
backend/tests/fixtures/: recall_dataset.json
ci-agent/backend/: .env.example  Dockerfile  pyproject.toml
ci-agent/backend/app/: __init__.py  main.py
ci-agent/backend/data/: ci_agent.db
(+56 files in other folders)
