[project]
name = "ci-agent-backend"
version = "0.1.0"
description = "Evidence-first competitive intelligence agent backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.5.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "langgraph>=0.2.0",
  "python-dotenv>=1.0.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx2>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["integration: 需要外网或真实 LLM API key 的集成测试"]
addopts = "-m 'not integration'"
